[workspace]
members = ["gtk4-layer-shell", "gtk4-layer-shell-sys"]
exclude = ["gir"]
resolver = "2"

[workspace.package]
authors = ["pentamassiv <pentamassiv@posteo.de>"]
rust-version = "1.70"
edition = "2021"
license = "MIT"

[workspace.dependencies]
libc = "0.2"
bitflags = "2.0"
# glib-sys = "0.20"
# glib = "0.20"
# gio = "0.20"
glib = { git = "https://github.com/ogios/gtk-rs-core.git", version = "0.20", branch = "0.20", package = "glib" }
glib-sys = { git = "https://github.com/ogios/gtk-rs-core.git", version = "0.20", branch = "0.20", package = "glib-sys" }
gio = { git = "https://github.com/ogios/gtk-rs-core.git", version = "0.20", branch = "0.20", package = "gio" }


gtk4-sys = { git = "https://github.com/ogios/gtk4-rs.git", version = "0.9", branch = "0.9", package = "gtk4-sys" }
gtk = { git = "https://github.com/ogios/gtk4-rs.git", version = "0.9", branch = "0.9", package = "gtk4" }
gdk4-sys = { git = "https://github.com/ogios/gtk4-rs.git", version = "0.9", branch = "0.9", package = "gdk4-sys" }
gdk = { git = "https://github.com/ogios/gtk4-rs.git", version = "0.9", branch = "0.9", package = "gdk4" }

# gdk4-sys = "0.9"
# gdk = { package = "gdk4", version = "0.9" }
# gtk4-sys = "0.9"
# gtk = { git = "https://github.com/ogios/gtk4-rs.git", package = "gtk4" }
# gtk4-sys = { git = "https://github.com/ogios/gtk4-rs.git", package = "gtk4-sys" }
# gdk = { git = "https://github.com/ogios/gtk4-rs.git", package = "gdk" }
# gdk4-sys = { git = "https://github.com/ogios/gtk4-rs.git", package = "gdk4-sys" }
system-deps = "7"
shell-words = "1.0"
tempfile = "3"
gtk4-layer-shell-sys = { path = "gtk4-layer-shell-sys", version = "0.3" }
